# NewFunctionsPYC

./: LICENSE  README.md  __init__.py  collection.py  pyproject.toml  setup.py
NewFunctionsPYC/: __init__.py  checks.py  clientLogin.py  collection.py  dinamic_import.py  embed.py  hybrid.py  loader.py  options.py
NewFunctionsPYC/client/: loader.py
NewFunctionsPYC/commands/: commands.py  hybrid.py  options.py  prefix.py  slash.py
NewFunctionsPYC/embeds/: embed.py
client/: loader.py
commands/: hybrid.py  slash.py
embeds/: embed.py
exemples/: BotMain.py  Collection.py  CommandPrefixCog.py  EmbedBuilder.py  HybridCommandsCog.py  LoadCogs.py  SlashCommandCog.py  UpsertComands.py  main.py
exemples/commands/: __commandPrefix.py  __hybridCommands.py  __slashCommand.py  commands.py  embedBuilder.py
